# launcher

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Info.plist  Makefile  README.md  build.rs  check_json.sh  entitlements.plist  go.mod  launch_rosetta.sh  make.go  minecraft_version_analyzer.py  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  version_analyzer.py  version_manager.py
.cargo/: config.toml
.github/workflows/: docker.yml  rust.yml
archived/: config.rs
archived/creeper/: mod.rs
archived/creeper/java/utils/: mod.rs  models.rs
archived/creeper/utils/: file_manager.rs  mod.rs  system_info.rs
archived/creeper/vanilla/: models.rs
assets/icons/: app_icon.icns
assets/images/buttons/: additional.png.base64  change.png.base64  cloud.png.base64  debug.png.base64  delete.png.base64  folder.png.base64  home.png.base64  packs.png.base64  play.png.base64  plus.png.base64  settings.png.base64
assets/images/other/: logo.png.base64  microsoft.png.base64
assets/news/: news.md
assets/styles/: animations.css  auth.css  base.css  main.css  output.css
assets/styles/components/: browser.css  chat.css  context_menu.css  debug.css  error_message.css  home.css  logo.css  navigation.css  new.css  news.css  progress.css  rename_dialog.css  settings.css  titlebar.css  version_selector.css
assets/styles/other/: output.css
assets/styles/pages/: base.css  main.css
dev/version-analyzer/: go.mod  main.go
dev/version-manager/: go.mod  main.go
public/assets/styles/: auth.css  debug.css  main.css  output.css  tailwind.css
python/: launcher.py  requirements.txt
scripts/: SCRIPTS.md  build_and_sign.sh  compress-macos.sh  create_app_bundle.sh  setup_dev_signing.sh  sign_app.sh  test-compression.sh
scripts/linux/: appimage.sh
scripts/macos/: bundle.sh  clean.sh  compress.sh  dmg.sh  sign.sh
scripts/windows/: build_installer.ps1  installer.nsi
src/: main.rs
src/backend/: archon.rs  bridge.rs  mod.rs
src/backend/communicator/: communicator.rs
src/backend/creeper/: cli.rs  creeper.rs  launcher.rs  main.rs  mod.rs  model.rs  models.rs
src/backend/creeper/cli/: launch_minecraft.rs  main.rs  mod.rs  models.rs  selector.rs
src/backend/creeper/cli/utils/: mod.rs  remover.rs
src/backend/creeper/downloader/: http.rs  mod.rs  models.rs  progress.rs
src/backend/creeper/forge/: mod.rs
src/backend/creeper/java/: java_config.rs  java_downloader.rs  manager.rs  mod.rs  models.rs  runtime.rs  version_checker.rs
src/backend/creeper/java/utils/: java_downloader.rs
src/backend/creeper/utils/: cache_manager.rs  directory_manager.rs  file_manager.rs  mod.rs  process_manager.rs  progress_bar.rs  version_checker.rs
src/backend/creeper/vanilla/: downloader.rs  mod.rs  models.rs
src/backend/launcher/: bridge.rs  common.rs  core.rs  file_validator.rs  launcher.rs  mod.rs  models.rs  platform.rs  progress.rs  system_info.rs  versions.rs
src/backend/launcher/downloader/: context.rs  helper.rs  main.rs  mod.rs  models.rs
src/backend/launcher/java/: manager.rs  runtime.rs
src/backend/python/: mod.rs  python.rs
src/backend/services/: instance.rs  launcher.rs  mod.rs  starter.rs  updater.rs  visit_tracker.rs
src/backend/utils/: application.rs  archive_utils.rs  assets.rs  command.rs  config.rs  css.rs  css_loader.rs  downloader.rs  file_manager.rs  file_utils.rs  formater.rs  http.rs  mod.rs  os.rs  paths.rs  progress_bridge.rs  python.rs  route.rs  sizer.rs  starter.rs  stream.rs
src/backend/utils/app/: main.rs
src/backend/utils/archiever/: main.rs
src/backend/utils/css/: main.rs
src/backend/utils/launcher/: mod.rs  paths.rs  starter.rs
src/backend/utils/net/: http.rs  stream.rs
src/backend/utils/system/: files.rs  mod.rs  os.rs
src/frontend/: game_state.rs  mod.rs
src/frontend/app/: main.rs
src/frontend/assets/: main.rs
src/frontend/chats/: chat.rs  main.rs  manager.rs  mod.rs
src/frontend/components/: auth_layout.rs  chat_sidebar.rs  context_menu.rs  debug_window.rs  layout.rs  minecraft_launcher.rs  mod.rs  navigation.rs  news.rs  standalone_logo.rs
src/frontend/components/common/: debug.rs  game_progress.rs  logo.rs  menu.rs  mod.rs  news.rs  progressbar.rs  renamer.rs  selector.rs  standalone_logo.rs  titlebar.rs  version_selector.rs
src/frontend/components/launcher/: context_menu.rs  debug.rs  debug_window.rs  launcher.rs  menu.rs  minecraft_launcher.rs  mod.rs  rename_dialog.rs  renamer.rs
src/frontend/components/layout/: auth.rs  auth_layout.rs  chat.rs  chat_sidebar.rs  main.rs  mod.rs  nav.rs  navigation.rs
src/frontend/instances/: main.rs
src/frontend/pages/: auth.rs  main.rs  mod.rs  new.rs  settings.rs
src/frontend/pages/auth/: auth_context.rs  main.rs  mod.rs  user_config.rs
src/frontend/pages/main/: main.rs  mod.rs
src/frontend/pages/new/: main.rs  mod.rs
src/frontend/pages/settings/: mod.rs
src/frontend/services/: chats.rs  context.rs  instances.rs  launcher.rs  mod.rs  states.rs  user.rs
src/frontend/services/chats/: main.rs  mod.rs
src/frontend/services/instances/: main.rs  mod.rs
src/frontend/states/: game_state.rs  mod.rs
src/frontend/ui/: mod.rs
src/frontend/ui/auth/: auth.rs  auth_context.rs  main.rs  mod.rs
src/frontend/ui/launcher/: console.rs  main.rs  mod.rs  packs.rs
src/frontend/ui/main/: cloud.rs  home.rs  main.rs  new.rs  settings.rs
src/utils/: archive.rs  dirs.rs  error.rs  hex.rs  logging.rs  mod.rs  sha1.rs  which.rs
src/utils/error/: main.rs
src/utils/logger/: main.rs
src/utils/net/: main.rs
src/utils/which/: main.rs
utils/: winres.rs
