[package]
name = "DreamLauncher"
authors = ["Frogdream Studios"]
description = "A powerful and lightweight Minecraft launcher that will be perfect for every player"
repository = "https://github.com/FrogdreamStudios/launcher"
keywords = ["minecraft", "launcher", "java", "gaming", "cross-platform"]
categories = ["games"]
license = "LGPL-3.0-only"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["desktop"] }
dioxus-router = "0.7.0-rc.0"
dioxus-desktop = { version = "0.7.0-rc.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "fs",
    "process",
    "time",
    "sync",
    "macros",
    "net",
    "signal",
], default-features = false }
base64 = "0.22.1"
webbrowser = "1.0.5"
self_update = { version = "0.42.0", features = [
    "archive-zip",
    "archive-tar",
    "compression-flate2",
] }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
futures-util = "0.3.31"
anyhow = "1.0.99"
log = "0.4.27"
env_logger = "0.11.8"
chrono = { version = "0.4.41", features = ["serde"] }
semver = "1.0.26"
sha2 = "0.11.0-rc.0"
regex = "1.11.2"
hex = "0.4.3"
pyo3 = { version = "0.26.0", features = ["auto-initialize", "abi3-py38"] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
minimal = []
memory-optimized = []

[[bin]]
name = "DreamLauncher"
path = "src/main.rs"

[[bin]]
name = "updater"
path = "src/bin/updater.rs"

[build-dependencies]
winres = "0.1.12"
log = "0.4.27"
base64 = "0.22.1"

[profile.dev]
incremental = true
opt-level = 1
debug = 1

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
debug-assertions = false
rpath = false
incremental = false
debug = false
split-debuginfo = "off"

[profile.release.package."*"]
opt-level = "z"

[target.'cfg(windows)'.dependencies]
dioxus-desktop = { version = "0.7.0-rc.0", default-features = false, features = [
    "tokio_runtime",
] }

[package.metadata.bundle]
name = "Dream Launcher"
identifier = "com.frogdream.launcher"
version = "0.1.0"
copyright = "© 2025 Frogdream Studios"
category = "Game"
short_description = "A powerful and lightweight Minecraft launcher"
long_description = "A powerful and lightweight Minecraft launcher that will be perfect for every player"

[package.metadata.bundle.windows]
webview2_install_mode = "embedbootstrapper"
webview2_user_data_folder = ".dream-launcher"
console_subsystem = false
